# t212-to-digrin-cli-py

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  aws_utils.py  decorators.py  df_utils.py  main.py  pyproject.toml  t212.py  t212_utils.py
.github/workflows/: ci.yml  commitlint.yml  integration.yml  lint.yml
custom_utils/: aws.py  aws_utils.py  csv_utils.py  dataframe_utils.py  decorators.py  dt.py  email_utils.py  t212.py  t212_utils.py
tests/: test_dataframe_utils.py  test_datetime_utils.py
