[project]
name = "cli-t212-to-digrin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.18",
    "bs4>=0.0.2",
    "pandas>=2.2.3",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
extend-select = ["E501", "N", "R", "I", "C901", "PD", "NPY"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]
